add System Programmin Lec.1

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
-  "cssTheme": "Obsidianite",
+  "cssTheme": "Vanilla AMOLED",
   "theme": "obsidian",
-  "accentColor": "#ffffff"
+  "accentColor": ""
 }
